#
## Copyright (C) 2001-2023 Graeme Walker <graeme_walker@users.sourceforge.net>
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

work_scripts = \
	doxygen.sh \
	make-manifest.sh \
	make-setup.sh \
	make-format \
	make-website \
	make2cmake \
	make2cdb \
	make2qmake \
	make2nmake \
	make2unity \
	mbedtlsbuild.pl \
	libresslbuild.pl \
	libresslbuild.mak \
	qtbuild.pl \
	winbuild.pm \
	winbuildall.bat \
	AutoMakeParser.pm \
	BuildInfo.pm \
	CompilationDatabase.pm \
	ConfigStatus.pm \
	reduce \
	reduce.pl \
	Functions.pm \
	Reduce.pm

EXTRA_DIST = \
	$(work_scripts)

noinst_SCRIPTS = \
	$(work_scripts)

